--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -18,8 +18,7 @@ framework:
     form:            ~
     csrf_protection: ~
     validation:      { enable_annotations: true }
-    serializer:      
-        enabled:true
+    serializer:    ~
     templating:
         engines: ['twig']
         #assets_version: SomeVersionScheme
