basic auth + user table

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,6 +2,10 @@ mti_user_back_office:
     resource: "@MTIUserBackOfficeBundle/Resources/config/routing.yml"
     prefix:   /
 
+mti_home:
+    resource: "@MTIApiProjectHomeBundle/Resources/config/routing.yml"
+    prefix:   /
+
 mti_hello_world:
     resource: "@MTIHelloWorldBundle/Resources/config/routing.yml"
     prefix:   /
