--- a/src/MTI/UserBackOfficeBundle/Resources/config/routing.yml
+++ b/src/MTI/UserBackOfficeBundle/Resources/config/routing.yml
@@ -1,3 +1,15 @@
 mti_user_back_office_homepage:
     path:     /backoffice
     defaults: { _controller: MTIUserBackOfficeBundle:Backoffice:index }
+
+mti_user_back_office_addtest:
+    path:     /addtest
+    defaults: { _controller: MTIUserBackOfficeBundle:Backoffice:create }
+
+mti_user_back_office_show:
+    path:     /show/{id}
+    defaults: { _controller: MTIUserBackOfficeBundle:Backoffice:show }
+
+mti_user_back_office_json:
+    path:     /testjson
+    defaults: { _controller: MTIUserBackOfficeBundle:Backoffice:testjson }
