--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+mti_le_bon_coin:
+    resource: "@MTILeBonCoinBundle/Resources/config/routing.yml"
+    prefix:   /
+
 mti_user_back_office:
     resource: "@MTIUserBackOfficeBundle/Resources/config/routing.yml"
     prefix:   /
