parsing offres + demandes

--- a/src/MTI/LeBonCoinBundle/Resources/config/routing.yml
+++ b/src/MTI/LeBonCoinBundle/Resources/config/routing.yml
@@ -5,3 +5,11 @@ mti_le_bon_coin_homepage:
 mti_le_bon_coin_homepage2:
     path:     /leboncoin/get/ads/offers/
     defaults: { _controller: MTILeBonCoinBundle:Default:offers }
+
+mti_le_bon_coin_homepage3:
+    path:     /leboncoin/get/ads/demands/
+    defaults: { _controller: MTILeBonCoinBundle:Default:demands }
+
+mti_le_bon_coin_homepage4:
+    path:     /leboncoin/get/ads/{adID}
+    defaults: { _controller: MTILeBonCoinBundle:Default:ads }
