check usef token and limitation

--- a/src/MTI/UserBackOfficeBundle/Resources/config/doctrine/Profile.orm.yml
+++ b/src/MTI/UserBackOfficeBundle/Resources/config/doctrine/Profile.orm.yml
@@ -29,4 +29,7 @@ MTI\UserBackOfficeBundle\Entity\Profile:
             length: 255
         roles:
             type: array
+        subscribe:
+            type: integer
+            length: 11
 
