--- a/src/MTI/LeBonCoinBundle/Resources/config/routing.yml
+++ b/src/MTI/LeBonCoinBundle/Resources/config/routing.yml
@@ -13,3 +13,8 @@ mti_le_bon_coin_homepage3:
 mti_le_bon_coin_homepage4:
     path:     /leboncoin/get/ads/{adID}
     defaults: { _controller: MTILeBonCoinBundle:Default:ads }
+
+mti_le_bon_coin_homepage5:
+    path:     /leboncoin/post/mail/{adID}
+    defaults: { _controller: MTILeBonCoinBundle:Default:mail }
+    methods:  [POST]
