--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/rest-bundle": "1.6",
         "jms/serializer-bundle": "^0.13.0",
-        "escapestudios/wsse-authentication-bundle": "2.3.x-dev"
+        "escapestudios/wsse-authentication-bundle": "2.3.x-dev",
+		"phpunit/phpunit": "4.7.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
