--- a/src/MTI/LeBonCoinBundle/Resources/config/routing.yml
+++ b/src/MTI/LeBonCoinBundle/Resources/config/routing.yml
@@ -18,3 +18,7 @@ mti_le_bon_coin_homepage5:
     path:     /leboncoin/post/mail/{adID}/
     defaults: { _controller: MTILeBonCoinBundle:Default:mail }
     methods:  [POST]
+
+mti_le_bon_coin_homepage6:
+    path:     /leboncoin/post/ad/
+    defaults: { _controller: MTILeBonCoinBundle:Default:post }
