categories bar chart

--- a/src/MTI/UserBackOfficeBundle/Resources/config/doctrine/Call.orm.yml
+++ b/src/MTI/UserBackOfficeBundle/Resources/config/doctrine/Call.orm.yml
@@ -18,6 +18,10 @@ MTI\UserBackOfficeBundle\Entity\Call:
             type: string
             length: 100
             nullable: TRUE
+        category:
+            type: integer
+            length: 11
+            nullable: TRUE
 
     lifecycleCallbacks:
         prePersist: [setCreatedValue]
